--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js && cp -r ./build/* ./www",
+    "build": "node scripts/build.js",
     "lint": "eslint src",
     "test": "node scripts/test.js --env=jsdom",
     "test-update-snapshots": "node scripts/test.js --env=jsdom --updateSnapshot",
@@ -20,7 +20,6 @@
     "package-mac": "electron-packager build/ --overwrite --platform=darwin --arch=x64 --icon=assets/icons/round/round.icns --prune=true --out=release-builds --version-string.CompanyName=\"Complex Data Collective\" --version-string.FileDescription=CE --version-string.ProductName=\"Network Canvas\" --version-string.ProductVersion=\"4.0.0\"",
     "package-win": "electron-packager build/ --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/round/round.ico --prune=true --out=release-builds --version-string.CompanyName=\"Complex Data Collective\" --version-string.FileDescription=CE --version-string.ProductName=\"Network Canvas\" --version-string.ProductVersion=\"4.0.0\"",
     "package-linux": "electron-packager build/ --overwrite --platform=linux --arch=x64 --icon=assets/icons/round/NC-Round@2x.png --prune=true --out=release-builds --version-string.CompanyName=\"Complex Data Collective\" --version-string.FileDescription=CE --version-string.ProductName=\"Network Canvas\" --version-string.ProductVersion=\"4.0.0\"",
-    "package-cordova": "cordova build ios && cordova build android",
     "create-installer-mac": "electron-installer-dmg ./release-builds/Network\\ Canvas-darwin-x64/Network\\ Canvas.app Network\\ Canvas --out=release-builds --overwrite --icon=assets/icons/square/square.icns"
   },
   "repository": {
@@ -45,7 +44,7 @@
     "custom-react-scripts": "0.0.21",
     "detect-port": "1.1.0",
     "dotenv": "2.0.0",
-    "electron": "^1.4.15",
+    "electron": "^1.6.11",
     "electron-installer-dmg": "^0.2.0",
     "electron-packager": "^8.5.2",
     "electron-winstaller": "^2.5.2",
@@ -88,8 +87,11 @@
     "create-react-class": "^15.5.3",
     "gridle": "^2.0.48",
     "history": "^4.5.1",
+    "keypair": "^1.0.1",
     "lodash": "^4.17.4",
     "network-canvas-ui": "https://github.com/codaco/Network-Canvas-UI.git",
+    "node-forge": "^0.7.1",
+    "private-socket": "file:../private-socket/",
     "prop-types": "^15.5.8",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -112,7 +114,8 @@
     "rxjs": "^5.4.0",
     "sass-svg": "^1.0.1",
     "semantic-ui-react": "^0.67.2",
-    "upgrade": "^1.1.0"
+    "upgrade": "^1.1.0",
+    "yarn": "^0.24.5"
   },
   "homepage": ".",
   "main": "src/electron-starter.js",
