--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "change-case": "^3.0.1",
     "classnames": "^2.2.5",
     "create-react-class": "^15.5.3",
+    "event-emitter": "^0.3.5",
     "history": "^4.5.1",
     "ip": "^1.1.5",
     "lodash": "^4.17.4",
